--- a/src/app/pages/course/list/course.component.html
+++ b/src/app/pages/course/list/course.component.html
@@ -13,9 +13,10 @@
       <div class="card shadow">
         <div class="card-header border-0">
           <div class="d-flex justify-content-between">
-            <div style="display: flex; align-items: center; gap: 10px;">
-              <input type="text" placeholder="Search..." class="form-control" style="flex: 1;">
-              <a href="#!" class="btn btn-info">Search</a>
+            <div style="display: flex; align-items: center; gap: 10px;" [formGroup]="dataForm">
+              <input type="text" placeholder="Search Title..." class="form-control" style="flex: 1;"
+                formControlName="searchTitle">
+              <a class="btn btn-info" (click)="search()">Search</a>
             </div>
             <div class="text-right">
               <a [routerLink]="'/system-admin/course/new'" class="btn btn-sm btn-primary">Thêm mới</a>
@@ -28,6 +29,7 @@
             <thead class="thead-light">
               <tr>
                 <th scope="col">STT</th>
+                <th style="display: none;" scope="col">ID</th>
                 <th scope="col">Tiêu đề</th>
                 <th scope="col">Giá tiền</th>
                 <th scope="col">Số lượng đăng ký</th>
@@ -42,8 +44,9 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of courses; let i = index;">
+              <tr *ngFor="let item of dataPage; let i = index;">
                 <th scope="row">{{ i + 1 }}</th>
+                <td style="display: none;">{{item.id}}</td>
                 <td>{{ item.title }}</td>
                 <td>{{ item.price }}</td>
                 <td>{{ item.enrollment_count }}</td>
@@ -67,32 +70,47 @@
                     <div ngbDropdownMenu class="dropdown-menu-right dropdown-menu-arrow">
                       <a class="dropdown-item" [routerLink]="['/system-admin/course', item.id, 'view']">Xem</a>
                       <a class="dropdown-item" [routerLink]="['/system-admin/course', item.id, 'edit']">Cập nhật</a>
-                      <a class="dropdown-item" (click)="onDelete()">Xóa</a>
+                      <a class="dropdown-item" (click)="confirmDelete(item.id)"><button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#myModal">Xóa</button></a>
                     </div>
                   </div>
                 </td>
               </tr>
+              <div class="modal" id="myModal">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                      <h4 class="modal-title">Xác Nhận Xóa!</h4>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                      <span class="text-danger">Bạn Chắc Chắc Muốn Xóa Khóa học Này Không?</span>
+                    </div>
+                    <div class="modal-footer">
+                      <a class="btn btn-warning" (click)="deleteCourse()" data-bs-dismiss="modal">Xóa</a>
+                      <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </tbody> 
           </table>
         </div>
         <div class="card-footer py-4">
           <nav aria-label="...">
             <ul class="pagination justify-content-end mb-0">
-              <li class="page-item disabled">
-                <a class="page-link" tabindex="-1">
+              <li class="page-item" [class.disabled]="page === 0">
+                <a class="page-link" tabindex="-1" (click)="navigateToPage(page - 1)">
                   <i class="fas fa-angle-left"></i>
                   <span class="sr-only">Previous</span>
                 </a>
               </li>
-              <li class="page-item active">
-                <a class="page-link">1</a>
+              <li class="page-item" *ngFor="let i of getPageArray(); let index = index" [class.active]="i === page">
+                <a class="page-link" (click)="navigateToPage(i)">{{ i }}</a>
               </li>
-              <li class="page-item">
-                <a class="page-link" >2 <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="page-item"><a class="page-link">3</a></li>
-              <li class="page-item">
-                <a class="page-link">
+              <li class="page-item" [class.disabled]="page === totalPages">
+                <a class="page-link" (click)="navigateToPage(page + 1)">
                   <i class="fas fa-angle-right"></i>
                   <span class="sr-only">Next</span>
                 </a>
