--- a/src/app/pages/user-profile/update-user-profile/update.user-profile.component.html
+++ b/src/app/pages/user-profile/update-user-profile/update.user-profile.component.html
@@ -30,12 +30,15 @@
             </div>
             <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
               <div class="d-flex justify-content-between">
-                <button href="javascript:void(0)" class="btn btn-sm btn-info mr-4" >
+                <!-- Input element for file selection -->
+                <input type="file" name="files" #imageInput style="display: none" (change)="onFileSelected(imageInput)" accept="image/*">
+                <button class="btn btn-sm btn-info mr-4" (click)="imageInput.click()">
                   Tải ảnh
                 </button>
-                <button type="submit" href="javascript:void(0)" class="btn btn-sm btn-default float-right">Lưu</button>
+                <button type="button" class="btn btn-sm btn-default float-right" > Lưu</button>
               </div>
             </div>
+            
           </form>                   
           <div class="card-body pt-0 pt-md-4">
             <div class="row">
@@ -58,7 +61,7 @@
             </div>
               <div class="text-center">
                 <h3>
-                  {{userCloneData?.fullname}}<span class="font-weight-light">, {{userCloneData.date_of_birth}}</span>
+                  {{userCloneData?.fullname}}<span class="font-weight-light">, {{userCloneData?.date_of_birth}}</span>
                 </h3>
                 <div class="h5 font-weight-300">
                   <i class="ni location_pin mr-2"></i>Bucharest, Romania
