--- a/projects/user/src/app/pages/footer/footer.component.html
+++ b/projects/user/src/app/pages/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
 
-    &copy; copyright  2022 by <span>Trường đẹp trai vãi ò.</span> | all rights reserved!
+    &copy; copyright  2022 by <span>LearnifyApp</span> | all rights reserved!
  
  </footer>
