--- a/projects/user/src/app/pages/header/header.component.html
+++ b/projects/user/src/app/pages/header/header.component.html
@@ -21,7 +21,7 @@
           <p class="role">Học Viên</p>
           <a routerLink="profile" class="btn">Xem thông tin</a>
           <a routerLink="purchased-history" class="btn">Lịch Sử Mua Hàng</a>
-          <a href="http://localhost:4202/dashboard" class="btn">admin</a>
+          <a href="http://localhost:4202/system-admin/dashboard" class="btn">admin</a>
           <div class="flex-btn">
              <a routerLink="login" class="option-btn">Đăng nhập</a>
              <a routerLink="register" class="option-btn">Đăng kí</a>
