--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
     </button>
     <!-- Brand -->
     <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/system-admin/dashboard']">
-      <img src="./assets/img/logo/learnifyapp.jpg" class="navbar-brand-img" alt="...">
+      <img src="./assets/img/logo/learnifyapp.jpg" class="navbar-brand-img" alt="..." style="width: 200px;">
     </a>
 
     <!-- User -->
