in-progress lesson

--- a/src/app/pages/category/update/update.category.component.html
+++ b/src/app/pages/category/update/update.category.component.html
@@ -32,7 +32,7 @@
                   <label class="form-control-label" for="input-parentId">Parent ID</label>
                   <select id="parent_id" class="form-control" [disabled]="selectedCategory?.level === 0"
                     (change)="updateSelectedCategory($event.target.value)" formControlName="parent_id">
-                    <ng-container *ngFor="let item of category">
+                    <ng-container *ngFor="let item of categories">
                       <option [value]="item.id.toString()">{{getIndentation(item.level)}} {{item.name}}</option>
                       <ng-container *ngFor="let child of item.children">
                         <option *ngFor="let child of item.children" [value]="child.id.toString()">
