--- a/src/app/pages/lesson/list/lesson.component.html
+++ b/src/app/pages/lesson/list/lesson.component.html
@@ -51,7 +51,7 @@
                   {{ item.title }}
                 </td>
                 <td>
-                  {{ item.time }}
+                  {{ secondsToHms(item.time) }}
                 </td>
                 <td>
                   {{ item.video_url }}
