--- a/src/app/pages/user-profile/update-user-profile/update.user-profile.component.html
+++ b/src/app/pages/user-profile/update-user-profile/update.user-profile.component.html
@@ -163,7 +163,7 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-country">Mật khẩu <label style="color: red;">*</label></label>
-                    <input type="password" formControlName="password" id="input-country" class="form-control form-control-alternative" placeholder="******" value="">
+                    <input type="password" id="input-country" class="form-control form-control-alternative" placeholder="******" value="">
                   </div>
                 </div>
                 <div class="col-lg-6">
