in-progress: lesson

--- a/src/app/pages/lesson/list/lesson.component.html
+++ b/src/app/pages/lesson/list/lesson.component.html
@@ -57,7 +57,7 @@
                   {{ item.video_url }}
                 </td>
                 <td>
-                  {{ item.section_id }}
+                  {{ item.sectionId }}
                 </td>
                 <td>
                 </td>
